--- a/features/reporting/jasper-reports-compiler/pom.xml
+++ b/features/reporting/jasper-reports-compiler/pom.xml
@@ -36,8 +36,7 @@
   <dependencies>
     <dependency>
       <groupId>org.opennms.dependencies</groupId>
-      <artifactId>jasper-dependencies</artifactId>
-      <type>pom</type>
+      <artifactId>jasper-shaded</artifactId>
     </dependency>
   </dependencies>
 </project>
