--- a/opennms-container/core/container-fs/confd/conf.d/kafka-consumer-feature.toml
+++ b/opennms-container/core/container-fs/confd/conf.d/kafka-consumer-feature.toml
@@ -1,4 +1,4 @@
 [template]
 src = "kafka-consumer-feature.tpl"
-dest = "/usr/share/opennms/etc/featuresBoot.d/kafka-consumer.boot"
+dest = "/usr/share/opennms/etc/featuresBoot.d/_confd.kafka-consumer.boot"
 keys = ["/opennms/kafka/consumer"]
