--- a/opennms-container/core/Dockerfile
+++ b/opennms-container/core/Dockerfile
@@ -33,12 +33,34 @@ RUN chmod +x /tmp/plugins.sh  && cd /tmp && ./plugins.sh && rm ./plugins.sh
 
 FROM ${BASE_IMAGE} as core-base
 
-ARG REQUIRED_RPMS="diffutils hostname jrrd2 jq rrdtool"
+ARG REQUIRED_DEBS="rrdtool jrrd2 r-base-core rsync libxml-twig-perl libwww-perl jq diffutils hostname sudo"
+
+ARG REPO_KEY_URL="https://debian.opennms.org/OPENNMS-GPG-KEY"
 
 SHELL ["/bin/bash", "-c"]
 
-RUN microdnf -y install ${REQUIRED_RPMS} && \
-    rm -rf /var/cache/yum
+# Prevent setup prompt
+ENV DEBIAN_FRONTEND=noninteractive
+
+# import keys
+RUN apt-get update && \
+    apt-get \
+        --no-install-recommends \
+        -yq \
+        install \
+            gnupg \
+            ca-certificates && \
+    curl -fsSL ${REPO_KEY_URL} | apt-key add && \
+    echo "deb https://debian.opennms.org stable main" > /etc/apt/sources.list.d/opennms.list && \
+    apt-get update && \
+    apt-get \
+        --no-install-recommends \
+        -yq \
+        install \
+            ${REQUIRED_DEBS} && \
+    apt-get -y autoclean && \
+    apt-get -y clean && \
+    rm -rf /var/cache/apt
 
 # Create OpenNMS user with a specific group ID
 RUN groupadd \
