--- a/ui/package.json
+++ b/ui/package.json
@@ -72,8 +72,7 @@
     "vue": "^3.3.4",
     "vue-diff": "^1.2.4",
     "vue-router": "^4.2.4",
-    "vue3-ace-editor": "^2.2.3",
-    "vuex": "^4.1.0"
+    "vue3-ace-editor": "^2.2.3"
   },
   "devDependencies": {
     "@pinia/testing": "^0.1.3",
