--- a/opennms-container/core/container-fs/confd/conf.d/mattermost.properties.toml
+++ b/opennms-container/core/container-fs/confd/conf.d/mattermost.properties.toml
@@ -1,6 +1,4 @@
 [template]
 src = "mattermost.properties.tpl"
 dest = "/usr/share/opennms/etc/opennms.properties.d/_confd.mattermost.properties"
-keys = [
-   "opennms/notifd/mattermost",
-]
+keys = ["opennms/notifd/mattermost"]
