--- a/opennms-container/core/container-fs/confd/conf.d/newts.properties.toml
+++ b/opennms-container/core/container-fs/confd/conf.d/newts.properties.toml
@@ -1,7 +1,4 @@
 [template]
 src = "newts.properties.tpl"
 dest = "/usr/share/opennms/etc/opennms.properties.d/_confd.newts.properties"
-keys = [
-    "replication/factor",
-    "opennms/cassandra",
-]
+keys = ["replication/factor", "opennms/cassandra"]
