NMS-15914: clean up snakeyaml usage
* use snakeyaml 2.1 at runtime (1.33 is still needed for cassandra tests)
* bump jackson to latest 2.x (uses snakeyaml 2.x now)
* bump CXF to latest 3.x
* exclude (optional) snakeyaml dep from liquibase

--- a/container/features/src/test/karaf-resources/custom.properties
+++ b/container/features/src/test/karaf-resources/custom.properties
@@ -10,6 +10,7 @@ jre-11=${jre-10}, \
   sun.security.x509
 
 org.osgi.framework.system.packages.extra= \
+  java.net.http, \
   org.apache.karaf.branding, \
   sun.misc,\
   sun.net.dns,\
