--- a/container/karaf/src/main/filtered-resources/etc/custom.properties
+++ b/container/karaf/src/main/filtered-resources/etc/custom.properties
@@ -41,6 +41,7 @@ org.osgi.framework.system.packages.extra=org.apache.karaf.branding,\
         sun.reflect,\
         sun.security.ssl,\
         sun.security.x509,\
+        java.net.http,\
         javax.jms;version=1.1.0,\
         javax.mail;version=1.6.7,\
         javax.mail.internet;version=1.6.7,\
@@ -173,7 +174,7 @@ org.osgi.framework.system.packages.extra=org.apache.karaf.branding,\
         io.netty.util.internal.logging;version="${netty4Version}",\
         io.netty.util.internal.svm;version="${netty4Version}",\
         io.netty.util.internal;uses:="io.netty.util,io.netty.util.concurrent,io.netty.util.internal.logging,javax.security.cert,reactor.blockhound,reactor.blockhound.integration";version="${netty4Version}",\
-        io.swagger.parser;version="${swaggerVersion}",\
+        io.swagger.parser;version="${swaggerParserVersion}",
         io.swagger.v3.core.converter;version="${swaggerVersion}",\
         io.swagger.v3.core.filter;version="${swaggerVersion}",\
         io.swagger.v3.core.jackson;version="${swaggerVersion}",\
@@ -205,16 +206,14 @@ org.osgi.framework.system.packages.extra=org.apache.karaf.branding,\
         io.swagger.v3.oas.models.security;version="${swaggerVersion}",\
         io.swagger.v3.oas.models.servers;version="${swaggerVersion}",\
         io.swagger.v3.oas.models.tags;version="${swaggerVersion}",\
-        io.swagger.v3.parser;version="${swaggerVersion}",\
-        io.swagger.v3.parser.converter;version="${swaggerVersion}",\
-        io.swagger.v3.parser.core.extensions;version="${swaggerVersion}",\
-        io.swagger.v3.parser.core.models;version="${swaggerVersion}",\
-        io.swagger.v3.parser.exception;version="${swaggerVersion}",\
-        io.swagger.v3.parser.extensions;version="${swaggerVersion}",\
-        io.swagger.v3.parser.models;version="${swaggerVersion}",\
-        io.swagger.v3.parser.processors;version="${swaggerVersion}",\
-        io.swagger.v3.parser.reference;version="${swaggerVersion}",\
-        io.swagger.v3.parser.util;version="${swaggerVersion}",\
+        io.swagger.v3.parser.converter;version="${swaggerParserVersion}",\
+        io.swagger.v3.parser.core.extensions;version="${swaggerParserVersion}",\
+        io.swagger.v3.parser.core.models;version="${swaggerParserVersion}",\
+        io.swagger.v3.parser.exception;version="${swaggerParserVersion}",\
+        io.swagger.v3.parser.models;version="${swaggerParserVersion}",\
+        io.swagger.v3.parser.processors;version="${swaggerParserVersion}",\
+        io.swagger.v3.parser.util;version="${swaggerParserVersion}",\
+        io.swagger.v3.parser;version="${swaggerParserVersion}",\
         org.apache.commons.beanutils;version=${commonsBeanutilsVersion},\
         org.apache.commons.codec;version=${commonsCodecVersion},\
         org.apache.commons.codec.binary;version=${commonsCodecVersion},\
