--- a/container/shared/src/main/filtered-resources/etc/custom.properties
+++ b/container/shared/src/main/filtered-resources/etc/custom.properties
@@ -27,9 +27,11 @@ karaf.systemBundlesStartLevel=50
 #
 # You can place any customized configuration here.
 #
-org.osgi.framework.system.packages.extra=sun.nio.ch, \
+org.osgi.framework.system.packages.extra=\
+              java.net.http, \
               sun.misc, \
               sun.net.dns, \
+              sun.nio.ch, \
               sun.reflect, \
               sun.security.ssl, \
               sun.security.x509
