--- a/pom.xml
+++ b/pom.xml
@@ -1626,7 +1626,7 @@
     <c3p0Version>0.9.5.5</c3p0Version>
     <curatorVersion>5.5.0</curatorVersion>
     <curatorTestVersion>5.5.0</curatorTestVersion>
-    <cxfVersion>3.5.5</cxfVersion>
+    <cxfVersion>3.6.2</cxfVersion>
     <cxfXjcVersion>3.3.2</cxfXjcVersion>
     <dhcp4javaVersion>1.1.0</dhcp4javaVersion>
     <dnsjavaVersion>3.5.2_1</dnsjavaVersion>
@@ -1670,9 +1670,9 @@
     <httpasyncclientVersion>4.1.5</httpasyncclientVersion>
     <ipaddressVersion>5.4.0</ipaddressVersion>
     <jacksonVersion>1.9.14-atlassian-6</jacksonVersion>
-    <jackson2Version>2.14.2</jackson2Version>
+    <jackson2Version>2.15.3</jackson2Version>
     <jmsApiVersion>2.0.1</jmsApiVersion>
-    <snakeyamlVersion>1.33</snakeyamlVersion>
+    <snakeyamlVersion>2.1</snakeyamlVersion>
     <spiflyVersion>1.3.6</spiflyVersion>
     <jacocoVersion>0.8.9</jacocoVersion>
     <jasperreportsVersion>6.20.0</jasperreportsVersion>
@@ -5124,7 +5124,7 @@
       <dependency>
         <groupId>io.swagger.parser.v3</groupId>
         <artifactId>swagger-parser</artifactId>
-        <version>${swaggerVersion}</version>
+        <version>${swaggerParserVersion}</version>
       </dependency>
       <dependency>
         <groupId>org.postgresql</groupId>
