--- a/ui/package.json
+++ b/ui/package.json
@@ -82,7 +82,7 @@
     "@types/leaflet.markercluster": "^1.5.1",
     "@types/lodash": "^4.14.196",
     "@types/marked": "^4.0.3",
-    "@types/node": "^18.11.18",
+    "@types/node": "18",
     "@types/splitpanes": "^2.2.1",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
@@ -104,7 +104,7 @@
     "vue-tsc": "^1.6.5"
   },
   "engines": {
-    "node": ">=16.18.1",
+    "node": ">=18",
     "yarn": ">=1.22.18"
   },
   "resolutions": {
