--- a/container/karaf/src/main/filtered-resources/etc/custom.properties
+++ b/container/karaf/src/main/filtered-resources/etc/custom.properties
@@ -637,10 +637,10 @@ org.osgi.framework.system.packages.extra=org.apache.karaf.branding,\
         org.snmp4j.log;version=${snmp4jVersion},\
         org.snmp4j.mp;version=${snmp4jVersion},\
         org.snmp4j.security;version=${snmp4jVersion},\
+        org.snmp4j.security.dh;version=${snmp4jVersion},\
         org.snmp4j.security.nonstandard;version=${snmp4jVersion},\
         org.snmp4j.smi;version=${snmp4jVersion},\
         org.snmp4j.test;version=${snmp4jVersion},\
-        org.snmp4j.tools;version=${snmp4jVersion},\
         org.snmp4j.tools.console;version=${snmp4jVersion},\
         org.snmp4j.transport;version=${snmp4jVersion},\
         org.snmp4j.transport.ssh;version=${snmp4jVersion},\
