--- a/dependencies/snmp4j/pom.xml
+++ b/dependencies/snmp4j/pom.xml
@@ -27,6 +27,17 @@
       </exclusions>
     </dependency>
     <dependency>
+      <groupId>org.snmp4j</groupId>
+      <artifactId>snmp4j-log4j</artifactId>
+      <version>${snmp4jlogVersion}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>log4j-over-slf4j</artifactId>
       <scope>runtime</scope>
