--- a/pom.xml
+++ b/pom.xml
@@ -1764,8 +1764,9 @@
     <slf4jVersion>1.7.36</slf4jVersion>
     <smackVersion>4.0.6</smackVersion>
     <snappyJavaVersion>1.1.10.3</snappyJavaVersion>
-    <snmp4jVersion>2.5.5</snmp4jVersion>
-    <snmp4jagentVersion>2.5.3</snmp4jagentVersion>
+    <snmp4jVersion>2.8.18</snmp4jVersion>
+    <snmp4jagentVersion>2.7.9</snmp4jagentVersion>
+    <snmp4jlogVersion>2.8.11</snmp4jlogVersion>
     <sonarVersion>3.9.1.2184</sonarVersion>
     <spockVersion>2.3-groovy-2.5</spockVersion>
     <swaggerUIVersion>3.13.0</swaggerUIVersion>
