--- a/features/collection/persistence-tcp/pom.xml
+++ b/features/collection/persistence-tcp/pom.xml
@@ -60,9 +60,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.opennms.dependencies</groupId>
-      <artifactId>netty-dependencies</artifactId>
-      <type>pom</type>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-all</artifactId>
+      <version>${netty4Version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
