--- a/core/ipc/rpc/kafka/pom.xml
+++ b/core/ipc/rpc/kafka/pom.xml
@@ -12,12 +12,11 @@
     <packaging>bundle</packaging>
     <build>
       <!-- Enable below extension and plugin when you need to generate java source files from proto -->
-
-<!--      <extensions>
+      <!--<extensions>
         <extension>
           <groupId>kr.motd.maven</groupId>
           <artifactId>os-maven-plugin</artifactId>
-          <version>1.6.2</version>
+          <version>${maven.os.plugin.version}</version>
         </extension>
       </extensions>-->
         <plugins>
@@ -33,14 +32,13 @@
                     </instructions>
                 </configuration>
             </plugin>
-<!--            <plugin>
+            <!--<plugin>
               <groupId>org.xolstice.maven.plugins</groupId>
               <artifactId>protobuf-maven-plugin</artifactId>
-              <version>0.6.1</version>
               <configuration>
-                <protocArtifact>com.google.protobuf:protoc:3.6.1:exe:${os.detected.classifier}</protocArtifact>
+                <protocArtifact>com.google.protobuf:protoc:${protobufVersion}:exe:${os.detected.classifier}</protocArtifact>
                 <pluginId>grpc-java</pluginId>
-                <pluginArtifact>io.grpc:protoc-gen-grpc-java:1.24.0:exe:${os.detected.classifier}</pluginArtifact>
+                <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpcVersion}:exe:${os.detected.classifier}</pluginArtifact>
               </configuration>
               <executions>
                 <execution>
@@ -65,10 +63,10 @@
         <version>${project.version}</version>
       </dependency>
       <dependency>
-	    <groupId>org.opennms.features.distributed</groupId>
-	    <artifactId>core-api</artifactId>
-	    <version>${project.version}</version>
-	    <scope>provided</scope>
+        <groupId>org.opennms.features.distributed</groupId>
+        <artifactId>core-api</artifactId>
+        <version>${project.version}</version>
+        <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>org.opennms.core</groupId>
