--- a/core/ipc/twin/common/pom.xml
+++ b/core/ipc/twin/common/pom.xml
@@ -18,13 +18,13 @@
 
     <build>
         <!-- Enable below extension and plugin when you need to generate java source files from proto -->
-<!--                <extensions>
-                    <extension>
-                        <groupId>kr.motd.maven</groupId>
-                        <artifactId>os-maven-plugin</artifactId>
-                        <version>1.6.2</version>
-                    </extension>
-                </extensions>-->
+        <!--<extensions>
+            <extension>
+                <groupId>kr.motd.maven</groupId>
+                <artifactId>os-maven-plugin</artifactId>
+                <version>${maven.os.plugin.version}</version>
+            </extension>
+        </extensions>-->
         <!-- Include core protos in the bundle as resources -->
         <resources>
             <resource>
@@ -84,11 +84,10 @@
             <!--<plugin>
                 <groupId>org.xolstice.maven.plugins</groupId>
                 <artifactId>protobuf-maven-plugin</artifactId>
-                <version>0.6.1</version>
                 <configuration>
-                    <protocArtifact>com.google.protobuf:protoc:3.6.1:exe:${os.detected.classifier}</protocArtifact>
+                    <protocArtifact>com.google.protobuf:protoc:${protobufVersion}:exe:${os.detected.classifier}</protocArtifact>
                     <pluginId>grpc-java</pluginId>
-                    <pluginArtifact>io.grpc:protoc-gen-grpc-java:1.30.0:exe:${os.detected.classifier}</pluginArtifact>
+                    <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpcVersion}:exe:${os.detected.classifier}</pluginArtifact>
                 </configuration>
                 <executions>
                     <execution>
