--- a/features/kafka/consumer/pom.xml
+++ b/features/kafka/consumer/pom.xml
@@ -15,15 +15,14 @@
 
 
   <build>
-    <!-- Enable below extension and plugin when you need to generate java source files from proto -->
-
-   <extensions>
-<!--     <extension>
+   <!-- Enable below extension and plugin when you need to generate java source files from proto -->
+   <!--<extensions>
+     <extension>
        <groupId>kr.motd.maven</groupId>
        <artifactId>os-maven-plugin</artifactId>
-       <version>1.6.2</version>
-     </extension>-->
-   </extensions>
+       <version>${maven.os.plugin.version}</version>
+     </extension>
+   </extensions>-->
     <plugins>
       <plugin>
         <groupId>org.apache.felix</groupId>
@@ -35,14 +34,13 @@
           </instructions>
         </configuration>
       </plugin>
-<!--      <plugin>
+      <!--<plugin>
         <groupId>org.xolstice.maven.plugins</groupId>
         <artifactId>protobuf-maven-plugin</artifactId>
-        <version>0.6.1</version>
         <configuration>
-          <protocArtifact>com.google.protobuf:protoc:3.6.1:exe:${os.detected.classifier}</protocArtifact>
+          <protocArtifact>com.google.protobuf:protoc:${protobufVersion}:exe:${os.detected.classifier}</protocArtifact>
           <pluginId>grpc-java</pluginId>
-          <pluginArtifact>io.grpc:protoc-gen-grpc-java:1.24.0:exe:${os.detected.classifier}</pluginArtifact>
+          <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpcVersion}:exe:${os.detected.classifier}</pluginArtifact>
         </configuration>
         <executions>
           <execution>
