--- a/features/telemetry/protocols/jti/adapter/pom.xml
+++ b/features/telemetry/protocols/jti/adapter/pom.xml
@@ -11,13 +11,13 @@
   <name>OpenNMS :: Features :: Telemetry :: Protocols :: JTI :: Adapter</name>
   <packaging>bundle</packaging>
   <build>
-    <extensions>
+    <!--<extensions>
       <extension>
         <groupId>kr.motd.maven</groupId>
         <artifactId>os-maven-plugin</artifactId>
-        <version>${osMavenPluginVersion}</version>
+        <version>${maven.os.plugin.version}</version>
       </extension>
-    </extensions>
+    </extensions>-->
     <plugins>
       <plugin>
         <groupId>org.apache.felix</groupId>
@@ -31,25 +31,24 @@
           </instructions>
         </configuration>
       </plugin>
-    <!-- Enable when you need to generate java source files from proto -->
-<!--                  <plugin>
-              <groupId>org.xolstice.maven.plugins</groupId>
-              <artifactId>protobuf-maven-plugin</artifactId>
-              <version>0.6.1</version>
-              <configuration>
-                <protocArtifact>com.google.protobuf:protoc:3.19.2:exe:${os.detected.classifier}</protocArtifact>
-                <pluginId>grpc-java</pluginId>
-                <pluginArtifact>io.grpc:protoc-gen-grpc-java:1.43.2:exe:${os.detected.classifier}</pluginArtifact>
-              </configuration>
-              <executions>
-                <execution>
-                  <goals>
-                    <goal>compile</goal>
-                    <goal>compile-custom</goal>
-                  </goals>
-                </execution>
-              </executions>
-            </plugin>-->
+      <!-- Enable when you need to generate java source files from proto -->
+      <!--<plugin>
+        <groupId>org.xolstice.maven.plugins</groupId>
+        <artifactId>protobuf-maven-plugin</artifactId>
+        <configuration>
+          <protocArtifact>com.google.protobuf:protoc:${protobufVersion}:exe:${os.detected.classifier}</protocArtifact>
+          <pluginId>grpc-java</pluginId>
+          <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpcVersion}:exe:${os.detected.classifier}</pluginArtifact>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>compile</goal>
+              <goal>compile-custom</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>-->
     </plugins>
   </build>
   <dependencies>
