--- a/features/telemetry/protocols/netflow/transport/pom.xml
+++ b/features/telemetry/protocols/netflow/transport/pom.xml
@@ -16,11 +16,11 @@
   <build>
 
     <!-- Enable below extension and plugin to generate Java objects from proto file -->
-<!--    <extensions>
+    <!--<extensions>
       <extension>
         <groupId>kr.motd.maven</groupId>
         <artifactId>os-maven-plugin</artifactId>
-        <version>1.6.2</version>
+        <version>${maven.os.plugin.version}</version>
       </extension>
     </extensions>-->
     <plugins>
@@ -36,14 +36,13 @@
           </instructions>
         </configuration>
       </plugin>
-<!--      <plugin>
+      <!--<plugin>
         <groupId>org.xolstice.maven.plugins</groupId>
         <artifactId>protobuf-maven-plugin</artifactId>
-        <version>0.6.1</version>
         <configuration>
-          <protocArtifact>com.google.protobuf:protoc:3.16.3:exe:${os.detected.classifier}</protocArtifact>
+          <protocArtifact>com.google.protobuf:protoc:${protobufVersion}:exe:${os.detected.classifier}</protocArtifact>
           <pluginId>grpc-java</pluginId>
-          <pluginArtifact>io.grpc:protoc-gen-grpc-java:1.24.0:exe:${os.detected.classifier}</pluginArtifact>
+          <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpcVersion}:exe:${os.detected.classifier}</pluginArtifact>
         </configuration>
         <executions>
           <execution>
