--- a/ui/package.json
+++ b/ui/package.json
@@ -82,7 +82,7 @@
     "@types/leaflet.markercluster": "^1.5.1",
     "@types/lodash": "^4.14.196",
     "@types/marked": "^4.0.3",
-    "@types/node": "18",
+    "@types/node": ">=18",
     "@types/splitpanes": "^2.2.1",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
@@ -95,7 +95,7 @@
     "eslint-plugin-vue": "^9.16.1",
     "happy-dom": "^9.20.3",
     "prettier": "^2.8.8",
-    "typescript": "^4.9.4",
+    "typescript": "^5.2.2",
     "unplugin-auto-import": "^0.12.1",
     "unplugin-vue-components": "^0.22.12",
     "vite": "^4.3.9",
