NMS-9677: Add keycloak adapter

--- a/container/features/pom.xml
+++ b/container/features/pom.xml
@@ -281,6 +281,7 @@
                           <feature>scv-jceks-impl</feature>
                           <feature>scv-shell</feature>
                           <feature>snakeyaml</feature>
+                          <feature>spring-security-opennms</feature>
                           <feature>ssh</feature>
                           <feature>zookeeper-dependencies</feature>
 
