--- a/ui/package.json
+++ b/ui/package.json
@@ -46,6 +46,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "@vueuse/core": "^9.1.0",
+    "ace-builds": "^1.23.4",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
     "chartjs-plugin-zoom": "^1.2.1",
@@ -80,8 +81,8 @@
     "@types/marked": "^4.0.3",
     "@types/node": "^18.7.6",
     "@types/splitpanes": "^2.2.1",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
-    "@typescript-eslint/parser": "^5.33.0",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@typescript-eslint/parser": "^6.2.1",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vue-leaflet/vue-leaflet": "^0.6.1",
     "@vue/test-utils": "^2.0.2",
@@ -91,7 +92,7 @@
     "eslint-plugin-vue": "^9.3.0",
     "happy-dom": "^6.0.4",
     "prettier": "^2.7.1",
-    "typescript": "^4.7.4",
+    "typescript": "^5.2.2",
     "unplugin-auto-import": "^0.11.1",
     "vite": "^3.0.7",
     "vitest": "^0.22.0",
