NMS-16181: use patched Hibernate 3.6

--- a/dependencies/hibernate/pom.xml
+++ b/dependencies/hibernate/pom.xml
@@ -15,7 +15,7 @@
     can depend on to use the hibernate library.
   </description>
   <properties>
-    <hibernateVersion>3.6.10.Final</hibernateVersion> 
+    <hibernateVersion>3.6.11.ONMS_RELEASE_1</hibernateVersion>
   </properties>
   <dependencies>
     <dependency>
