--- a/opennms-container/sentinel/Makefile
+++ b/opennms-container/sentinel/Makefile
@@ -6,5 +6,6 @@ CONTAINER_TYPE_FRIENDLY := Sentinel
 DOCKER_PROJECT          := sentinel
 TARBALL                 := ../../opennms-assemblies/sentinel/target/*sentinel*.tar.gz
 TAR_STRIP_COMPONENTS    := 1
+ADDITIONAL_TARGETS      := sentinel-config-schema.yml
 
 include ../common.mk
