--- a/.circleci/main/executors.yml
+++ b/.circleci/main/executors.yml
@@ -4,7 +4,10 @@ executors:
       - image: cimg/base:stable-20.04
   build-executor:
     docker:
-      - image: opennms/build-env:circleci-ubuntu-jdk11-b9919
+      - image: opennms/build-env:circleci-ubuntu-jdk11
+  coverage-executor:
+    docker:
+      - image: opennms/build-env:circleci-ubuntu-jdk17
   docs-executor:
     docker:
       - image: opennms/antora:3.1.4-b10433
