--- a/pom.xml
+++ b/pom.xml
@@ -1057,6 +1057,33 @@
   </pluginManagement>
    <plugins>
      <plugin>
+       <groupId>org.openrewrite.maven</groupId>
+       <artifactId>rewrite-maven-plugin</artifactId>
+       <version>5.9.1</version>
+       <configuration>
+         <activeRecipes>
+           <recipe>org.opennms.core.RewriteConfig</recipe>
+         </activeRecipes>
+       </configuration>
+       <dependencies>
+         <dependency>
+           <groupId>org.openrewrite.recipe</groupId>
+           <artifactId>rewrite-logging-frameworks</artifactId>
+           <version>2.0.6</version>
+         </dependency>
+         <dependency>
+           <groupId>org.openrewrite.recipe</groupId>
+           <artifactId>rewrite-migrate-java</artifactId>
+           <version>2.2.0</version>
+         </dependency>
+         <dependency>
+           <groupId>org.openrewrite.recipe</groupId>
+           <artifactId>rewrite-spring</artifactId>
+           <version>5.0.12</version>
+         </dependency>
+       </dependencies>
+     </plugin>
+     <plugin>
        <groupId>org.commonjava.maven.plugins</groupId>
        <artifactId>directory-maven-plugin</artifactId>
        <version>1.0</version>
