clean up commons fileutils usage

--- a/rewrite.yml
+++ b/rewrite.yml
@@ -1,6 +1,6 @@
 ---
 type: specs.openrewrite.org/v1beta/recipe
-name: org.opennms.core.RewriteConfig
+name: org.opennms.core.OpennmsRewriteConfig
 displayName: common rewrite patterns for the OpenNMS codebase
 recipeList:
   - org.openrewrite.java.apache.httpclient4.MigrateDefaultHttpClient
@@ -8,6 +8,4 @@ recipeList:
   - org.openrewrite.java.logging.slf4j.Slf4jBestPractices
   - org.openrewrite.java.migrate.UseJavaUtilBase64
   - org.openrewrite.java.migrate.apache.commons.codec.ApacheBase64ToJavaBase64
-#  - org.openrewrite.java.migrate.apache.commons.io.ApacheCommonsFileUtilsRecipes
-#  - org.openrewrite.java.migrate.apache.commons.io.ApacheFileUtilsToJavaFiles
-#  - org.openrewrite.java.migrate.apache.commons.io.ApacheCommonsFileUtilsRecipes$WriteStringToFileRecipe
+  - org.openrewrite.java.migrate.apache.commons.io.ApacheCommonsFileUtilsRecipes
