--- a/opennms-container/minion/Dockerfile
+++ b/opennms-container/minion/Dockerfile
@@ -94,7 +94,7 @@ COPY ./minion-config-schema.yml /opt/minion/confd/
 RUN install -d -m 750 /opt/minion/server-certs
 
 # Create prom-jmx-exporter folder
-RUN install -d -m 750 -u 10001 -g 0 /opt/prom-jmx-exporter
+RUN install -d -m 750 /opt/prom-jmx-exporter && chown --chown=10001:0 /opt/prom-jmx-exporter
 
 # Arguments for labels should not invalidate caches
 ARG BUILD_DATE="1970-01-01T00:00:00+0000"
